<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.example.assignment_day06.viewModel.ViewModel"/>
        <variable
            name="viewModel"
            type="com.example.assignment_day06.viewModel.ViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DetailFragment"
        android:id="@+id/fragment_detail">
        <TextView
            android:id="@+id/add_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/add_note"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/add_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/add_edit_text"
            app:layout_constraintTop_toTopOf="@+id/add_edit_text"
            app:tint="@color/black"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_edit_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:padding="8dp"
                android:background="@color/background"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/write_your_title"
                android:textColor="@color/black"
                android:textColorHint="#4C4C4C"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@color/background"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:gravity="top|start"
                android:padding="8dp"
                android:hint="@string/write_your_description"
                android:inputType="textMultiLine"
                android:lines="10"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHint="#4C4C4C"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->


</layout>